Implement embedded font loading
There is one flaky test still, but I don't know how to fix it